--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   },
+  "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only server.ts"
+  },
   "dependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.3.4"
   }
 }
