--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "typescript": "^5.1.6"
   },
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only server.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
   },
   "dependencies": {
     "@types/cors": "^2.8.13",
@@ -16,6 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.3.4"
+    "http-status": "^1.6.2",
+    "mongoose": "^7.3.4",
+    "zod": "^3.21.4"
   }
 }
